# SoulSync-AI

./: .env  .gitignore  .vercelignore  README.md  SoulSync_AI_TrackB.pptx  chatbot.py  data.json  main.py  pyproject.toml  requirements.txt  vercel.json
backend/: build knowledge base.py  chatbot.py  main.py  requirements.txt  server_log.txt
website/: package-lock.json  package.json
website/src/: App.jsx  index.css
