[project]
name = "mental-health-and-emotional-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "google-generativeai>=0.8.6",
    "gradio>=6.11.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.25",
    "langchain-google-genai>=4.2.1",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.14",
    "streamlit>=1.56.0",
    "textblob>=0.20.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "uvicorn>=0.42.0",
    "vadersentiment>=3.3.2",
]
